--- a/Project__1.ipynb
+++ b/Project__1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNxHz/R7UYuW2Tr9xTYej+g",
+      "authorship_tag": "ABX9TyNAo2W41u24lJNWdPTFW+dV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,6 +145,15 @@
         "            'buy'] = 1\n",
         "```\n",
         "    by using `dataframe.loc`, we can search for entries whose indicators meets the criteria that we determine as suggesting a good opportunity to buy more of the traded item, and edit the values in some of the columns of these entries in batch. In this case, we located a list of entries whose `deltaMACD`, `macd`, `volume` are all above zero, and set their value in the column `buy` as one, to label them as a good opportunity to buy.  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UtDJ7D-3CG3a"
+      },
+      "source": [
+        "## Appendix: Sample Code (For the purpose of instruction and self-learning)"
       ]
     },
     {
