--- a/NLP_TextSummarization.ipynb
+++ b/NLP_TextSummarization.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "NLP_TextSummarization.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyN3ATO+uz4guck/BtkKoJE7",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -4323,6 +4325,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CCIR-Academy/Techcamp2021S-Phase3/blob/main/NLP_TextSummarization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "GOAoelUUT6GN"
       },
       "source": [
@@ -4457,7 +4469,7 @@
           "height": 53
         },
         "id": "E4GSViQCl0dd",
-        "outputId": "0922278d-3977-493f-b385-6fa2b575fd85"
+        "outputId": "abda8e8d-e966-4a44-dac3-71382fc2a318"
       },
       "source": [
         "summary"
@@ -4477,7 +4489,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 23
         }
       ]
     },
@@ -4509,7 +4521,7 @@
           "height": 35
         },
         "id": "RdWbpEuGmHIq",
-        "outputId": "306fa00d-99cd-4900-e78a-847d41e0707b"
+        "outputId": "fe9f2e2c-51df-43d8-963c-597fd2ef18e3"
       },
       "source": [
         "summary = summarize(original_text, ratio=0.1)\n",
@@ -4530,7 +4542,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 24
         }
       ]
     },
@@ -4542,7 +4554,7 @@
           "height": 35
         },
         "id": "y2_iN0WXmStl",
-        "outputId": "98a2971c-c1ad-442b-fbb1-24887554d6ad"
+        "outputId": "bee253a0-e577-43e8-ceb1-84228ed6e2ce"
       },
       "source": [
         "summary = summarize(original_text, word_count=20)\n",
@@ -4563,7 +4575,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 26
         }
       ]
     },
@@ -4614,7 +4626,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YGzWYdWknnb1",
-        "outputId": "4c0b3b7e-e3e1-4aec-bb57-76db044168d9"
+        "outputId": "07d3cfc6-9697-470f-c118-6fc56d120201"
       },
       "source": [
         "import nltk\n",
@@ -4626,7 +4638,7 @@
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ],
           "name": "stdout"
         },
@@ -4640,7 +4652,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 28
         }
       ]
     },
@@ -4689,7 +4701,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LSVkXP4InvSh",
-        "outputId": "4169a9f0-20e4-411f-8dc6-f3486ccd05d1"
+        "outputId": "dbc00202-0b55-4711-c2dc-ccfd05060602"
       },
       "source": [
         "# Creating a summary of 3 sentences.\n",
@@ -4779,7 +4791,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RUpmEU-BodfE",
-        "outputId": "5007e615-36ec-48c0-9f8e-c9086880b35c"
+        "outputId": "58ffd37a-eeed-4c58-d3ea-7aa14fa03718"
       },
       "source": [
         "# creating the summarizer\n",
@@ -4859,7 +4871,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e-0A7VXLouYr",
-        "outputId": "0cbafaeb-98f0-42b9-9e47-024b77098be0"
+        "outputId": "dad0b0bd-fa01-4e1c-ea39-1f0112dcd4dc"
       },
       "source": [
         "#  Creating the summarizer\n",
@@ -4943,7 +4955,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FPDb-rUXqLKB",
-        "outputId": "0ee59b82-8d87-4e54-c3e3-b39620f88329"
+        "outputId": "f0aaa4c5-c432-4143-f3b5-4c2a0195edd5"
       },
       "source": [
         "# Instantiating the  KLSummarizer\n",
@@ -5025,7 +5037,7 @@
         "# Importing requirements\n",
         "from transformers import T5Tokenizer, T5Config, T5ForConditionalGeneration"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5036,7 +5048,7 @@
       "source": [
         "original_text = \" I know that we all think we're immortal, we're supposed to feel that way, we're graduating. The future is and should be bright, but, like our brief four years in high school, what makes life valuable is that it doesn't last forever, what makes it precious is that it ends. I know that now more than ever. And I say it today of all days to remind us that time is luck. So don't waste it living someone else's life, make yours count for something. Fight for what matters to you, no matter what. Because even if you fall short, what better way is there to live? It's easy to feel hopeful on a beautiful day like today, but there will be dark days ahead of us too, and there'll be days where you feel all alone, and that's when hope is needed most.Keep it alive. No matter how buried it gets, or lost you feel, you must promise me, that you will hold on to hope and keep it alive. We have to be greater than what we suffer. My wish for you, is to become hope. People need that.I know it feels like we're saying goodbye, but we will carry a piece of each other into everything that we do next, to remind us of who we are, and of who we're meant to be. I've had a great four years with you, and I'll miss you all very much \""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5051,7 +5063,7 @@
       "source": [
         "!pip install SentencePiece "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5094,7 +5106,7 @@
         "my_model = T5ForConditionalGeneration.from_pretrained('t5-small')\n",
         "tokenizer = T5Tokenizer.from_pretrained('t5-small')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5158,7 +5170,7 @@
         "text = \"summarize:\" + original_text\n",
         "text"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5199,7 +5211,7 @@
         "# encoding the input text\n",
         "input_ids=tokenizer.encode(text, return_tensors='pt', max_length=512)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5237,7 +5249,7 @@
         "summary_ids = my_model.generate(input_ids)\n",
         "summary_ids"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5295,7 +5307,7 @@
       "source": [
         "from transformers import BartForConditionalGeneration, BartTokenizer, BartConfig"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5356,7 +5368,7 @@
         "tokenizer=BartTokenizer.from_pretrained('facebook/bart-large-cnn')\n",
         "model=BartForConditionalGeneration.from_pretrained('facebook/bart-large-cnn')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5483,7 +5495,7 @@
       "source": [
         "original_text = \" I know that we all think we're immortal, we're supposed to feel that way, we're graduating. The future is and should be bright, but, like our brief four years in high school, what makes life valuable is that it doesn't last forever, what makes it precious is that it ends. I know that now more than ever. And I say it today of all days to remind us that time is luck. So don't waste it living someone else's life, make yours count for something. Fight for what matters to you, no matter what. Because even if you fall short, what better way is there to live? It's easy to feel hopeful on a beautiful day like today, but there will be dark days ahead of us too, and there'll be days where you feel all alone, and that's when hope is needed most.Keep it alive. No matter how buried it gets, or lost you feel, you must promise me, that you will hold on to hope and keep it alive. We have to be greater than what we suffer. My wish for you, is to become hope. People need that.I know it feels like we're saying goodbye, but we will carry a piece of each other into everything that we do next, to remind us of who we are, and of who we're meant to be. I've had a great four years with you, and I'll miss you all very much \""
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5515,7 +5527,7 @@
         "inputs = tokenizer.batch_encode_plus([original_text],return_tensors='pt')\n",
         "summary_ids = model.generate(inputs['input_ids'], early_stopping=True)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5551,7 +5563,7 @@
         "bart_summary = tokenizer.decode(summary_ids[0], skip_special_tokens=True)\n",
         "print(bart_summary)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5637,7 +5649,7 @@
         "inputs=tokenizer.batch_encode_plus([original_text],return_tensors='pt',max_length=512)\n",
         "summary_ids=model.generate(inputs['input_ids'],early_stopping=True)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5793,7 +5805,7 @@
         "GPT_summary=tokenizer.decode(summary_ids[0],skip_special_tokens=True)\n",
         "print(GPT_summary)\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5890,7 +5902,7 @@
         "XLM_summary=tokenizer.decode(summary_ids[0],skip_special_tokens=True)\n",
         "print(XLM_summary)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
